--- a/MVC/Views/Conversions/Index.cshtml
+++ b/MVC/Views/Conversions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DAL.Models.Conversion>
+﻿@model IEnumerable<DTO.ConversionDTO>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.ConversionName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Value)
+                @Html.DisplayNameFor(model => model.ConversionValue)
             </th>
             <th></th>
         </tr>
@@ -25,15 +25,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.ConversionName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Value)
+                @Html.DisplayFor(modelItem => item.ConversionValue)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ConversionId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ConversionId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ConversionId">Delete</a>
             </td>
         </tr>
 }
