--- a/MVC/Views/Conversions/Delete.cshtml
+++ b/MVC/Views/Conversions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DAL.Models.Conversion
+﻿@model DTO.ConversionDTO
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,21 +12,21 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ConversionName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.ConversionName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Value)
+            @Html.DisplayNameFor(model => model.ConversionValue)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Value)
+            @Html.DisplayFor(model => model.ConversionValue)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="ConversionId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
