--- a/MVC/Views/Conversions/Details.cshtml
+++ b/MVC/Views/Conversions/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DAL.Models.Conversion
+﻿@model DTO.ConversionDTO
 
 @{
     ViewData["Title"] = "Details";
@@ -11,20 +11,20 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ConversionName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.ConversionName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Value)
+            @Html.DisplayNameFor(model => model.ConversionValue)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Value)
+            @Html.DisplayFor(model => model.ConversionValue)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.ConversionId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
