--- a/MVC/Views/Accounts/Create.cshtml
+++ b/MVC/Views/Accounts/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
+                <input asp-for="Balance" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
             @if (ViewBag.UsersAvailable) {
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<div>
+<div class="mt-3"
     <a asp-action="Index">Back to List</a>
 </div>
 
