--- a/MVC/Views/Accounts/Edit.cshtml
+++ b/MVC/Views/Accounts/Edit.cshtml
@@ -16,17 +16,16 @@
             <input type="hidden" asp-for="UserId" />
             <div class="form-group">
                 <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
+                <input asp-for="Balance" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class="mt-3">
     <a asp-action="Index">Back to List</a>
 </div>
-
