--- a/MVC/Views/Accounts/Index.cshtml
+++ b/MVC/Views/Accounts/Index.cshtml
@@ -7,7 +7,9 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <form method="get" asp-action="Create" class="d-inline-block">
+        <button type="submit" class="btn btn-outline-success">Create New</button>
+    </form>
 </p>
 <table class="table">
     <thead>
@@ -18,24 +20,31 @@
             <th>
                 @Html.DisplayNameFor(model => model.Balance)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Balance)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AccountId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.AccountId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.AccountId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Balance)
+                </td>
+                <td>
+                    <form method="get" asp-action="Edit" asp-route-id="@item.AccountId" class="d-inline-block">
+                        <button type="submit" class="btn btn-primary">Edit</button>
+                    </form>
+                    <form method="get" asp-action="Details" asp-route-id="@item.AccountId" class="d-inline-block">
+                        <button type="submit" class="btn btn-secondary">Details</button>
+                    </form>
+                    <form method="get" asp-action="Delete" asp-route-id="@item.AccountId" class="d-inline-block">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
