Add transaction histories functionning

--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TransactionHistory" asp-action="Index">Transaction History</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TransactionHistories" asp-action="Index">Transaction Histories</a>
                         </li>
                     </ul>
                 </div>
