--- a/MVC/Views/Accounts/Create.cshtml
+++ b/MVC/Views/Accounts/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label">User</label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.Userselect"></select>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UsersSelect"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
