--- a/MVC/Views/TransactionHistories/Create.cshtml
+++ b/MVC/Views/TransactionHistories/Create.cshtml
@@ -13,42 +13,37 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AccountId" class="control-label"></label>
-                <select asp-for="AccountId" class ="form-control" asp-items="ViewBag.AccountId"></select>
+                <label asp-for="AccountId" class="control-label">User</label>
+                <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountsSelect"></select>
+                <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateTime" class="control-label"></label>
-                <input asp-for="DateTime" class="form-control" />
-                <span asp-validation-for="DateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Src" class="control-label"></label>
-                <select asp-for="Src" class="form-control"></select>
+                <label asp-for="Src" class="control-label">Source</label>
+                <select asp-for="Src" class="form-control" asp-items="ViewBag.SrcSelect"></select>
                 <span asp-validation-for="Src" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TransactionType" class="control-label"></label>
-                <select asp-for="TransactionType" class="form-control"></select>
+                <label asp-for="TransactionType" class="control-label">Type of the Transaction</label>
+                <select asp-for="TransactionType" class="form-control" asp-items="ViewBag.TransactionTypeSelect"></select>
                 <span asp-validation-for="TransactionType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" />
+                <input asp-for="Amount" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConversionName" class="control-label"></label>
-                <input asp-for="ConversionName" class="form-control" />
-                <span asp-validation-for="ConversionName" class="text-danger"></span>
+                <label asp-for="ConversionId" class="control-label">Conversion</label>
+                <select asp-for="ConversionId" class="form-control" asp-items="ViewBag.ConversionsSelect"></select>
+                <span asp-validation-for="ConversionId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ConversionValue" class="control-label"></label>
-                <input asp-for="ConversionValue" class="form-control" />
-                <span asp-validation-for="ConversionValue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            <!-- hidden input to transmit conversionList (IEnumerable) -->
+            @if (ViewBag.AccountsAvailable && ViewBag.ConversionsAvailable)
+            {
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            }
         </form>
     </div>
 </div>
@@ -56,4 +51,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
