--- a/MVC/Views/TransactionHistories/Create.cshtml
+++ b/MVC/Views/TransactionHistories/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AccountId" class="control-label">User</label>
+                <label asp-for="AccountId" class="control-label">AccountUsername    </label>
                 <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountsSelect"></select>
                 <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
