--- a/MVC/Views/TransactionHistories/Details.cshtml
+++ b/MVC/Views/TransactionHistories/Details.cshtml
@@ -40,21 +40,26 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Amount)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConversionName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ConversionName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConversionValue)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ConversionValue)
-        </dd>
+        @if (Model.ConversionName != null)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ConversionName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ConversionName)
+            </dd>
+        }
+        @if (Model.ConversionValue != null)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ConversionValue)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ConversionValue)
+            </dd>
+        }
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.TransactionHistoryId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
