--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -40,13 +40,19 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
                                 </li>
+                                <li>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="UserGroups" asp-action="Index">User Groups</a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="TransactionHistories" asp-action="Index">Transaction Histories</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Faculties</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Faculties" asp-action="Index">Faculties</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AppUser" asp-action="Index">App User</a>
