--- a/MVC/Views/Faculties/Index.cshtml
+++ b/MVC/Views/Faculties/Index.cshtml
@@ -44,25 +44,24 @@
 </form>
 
 @Html.Partial("_ListOfUsers", Model.SelectedUsers)
-
-<div class="row mt-5">
-    <!-- Amount Field -->
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="amount">Quota to Add</label>
-            <input type="number" min="0" class="form-control" id="amount" name="amount" />
-            <span class="text-danger" id="amountValidation"></span>
+<form method="post" asp-action="AddQuotaToSelectedUsers">
+        
+    <div class="row mt-5">
+        <!-- Amount Field -->
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="amount">Quota to Add</label>
+                <input type="number" min="0" class="form-control" id="amount" name="amount" />
+                <span class="text-danger" id="amountValidation"></span>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="row mt-3">
-    <div class="col-md-4">
-        <form method="post" asp-action="Submit">
-            <button type="submit" class="btn btn-primary">Add quota for the selected users</button>
-        </form>
+    <div class="row mt-3">
+        <div class="col-md-4">
+             <button type="submit" class="btn btn-primary">Add quota for the selected users</button>
+        </div>
     </div>
-</div>
-
+</form>
 
 
