Update global UI on the project

--- a/MVC/Views/Faculties/Index.cshtml
+++ b/MVC/Views/Faculties/Index.cshtml
@@ -52,7 +52,7 @@
             <div class="form-group">
                 <label for="quota">Quota to add to the selected user </label>
                 <div class="input-group mb-3">
-                    <input type="number" min="0" class="form-control" id="quota" name="quota" />
+                    <input type="number" min="0" step="0.01" class="form-control" id="quota" name="quota" />
                     <div class="input-group-append">
                         <span class="input-group-text">CHF</span>
                     </div>
