--- a/MVC/Views/Accounts/Create.cshtml
+++ b/MVC/Views/Accounts/Create.cshtml
@@ -14,12 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label">User</label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UsersSelect"></select>
+                <select asp-for="UserId" class="form-select" asp-items="ViewBag.UsersSelect"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" type="number" step="0.01" />
+                <div class="input-group mb-3">
+                    <input asp-for="Balance" class="form-control" type="number" step="0.01" />
+                    <div class="input-group-append">
+                        <span class="input-group-text">CHF</span>
+                    </div>
+                </div>
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
             @if (ViewBag.UsersAvailable) {
