--- a/MVC/Views/Accounts/Edit.cshtml
+++ b/MVC/Views/Accounts/Edit.cshtml
@@ -16,7 +16,12 @@
             <input type="hidden" asp-for="UserId" />
             <div class="form-group">
                 <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" type="number" step="0.01" />
+                <div class="input-group mb-3">
+                    <input asp-for="Balance" class="form-control" type="number" step="0.01" />
+                    <div class="input-group-append">
+                        <span class="input-group-text">CHF</span>
+                    </div>
+                </div>
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
