--- a/MVC/Views/Conversions/Edit.cshtml
+++ b/MVC/Views/Conversions/Edit.cshtml
@@ -18,9 +18,15 @@
                 <input asp-for="ConversionName" class="form-control" />
                 <span asp-validation-for="ConversionName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           
+            <div class="form-group mt-3">
                 <label asp-for="ConversionValue" class="control-label"></label>
-                <input asp-for="ConversionValue" class="form-control" />
+                <div class="input-group mb-3">
+                    <input type="number" min="0" asp-for="ConversionValue" class="form-control" />
+                    <div class="input-group-append">
+                        <span class="input-group-text">CHF</span>
+                    </div>
+                </div>
                 <span asp-validation-for="ConversionValue" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,7 +36,7 @@
     </div>
 </div>
 
-<div>
+<div class="mt-3">
     <a asp-action="Index">Back to List</a>
 </div>
 
