--- a/MVC/Views/TransactionHistories/Create.cshtml
+++ b/MVC/Views/TransactionHistories/Create.cshtml
@@ -14,33 +14,38 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AccountId" class="control-label">AccountUsername    </label>
-                <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountsSelect"></select>
+                <select asp-for="AccountId" class="form-select" asp-items="ViewBag.AccountsSelect"></select>
                 <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="Src" class="control-label">Source</label>
-                <select asp-for="Src" class="form-control" asp-items="ViewBag.SrcSelect"></select>
+                <select asp-for="Src" class="form-select" asp-items="ViewBag.SrcSelect"></select>
                 <span asp-validation-for="Src" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="TransactionType" class="control-label">Type of the Transaction</label>
-                <select asp-for="TransactionType" class="form-control" asp-items="ViewBag.TransactionTypeSelect"></select>
+                <select asp-for="TransactionType" class="form-select" asp-items="ViewBag.TransactionTypeSelect"></select>
                 <span asp-validation-for="TransactionType" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" type="number" step="0.01" />
+                <div class="input-group mb-3">
+                    <input asp-for="Amount" class="form-control" type="number" step="0.01" />
+                    <div class="input-group-append">
+                        <span class="input-group-text">CHF</span>
+                    </div>
+                </div>
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ConversionId" class="control-label">Conversion</label>
-                <select asp-for="ConversionId" class="form-control" asp-items="ViewBag.ConversionsSelect"></select>
+                <select asp-for="ConversionId" class="form-select" asp-items="ViewBag.ConversionsSelect"></select>
                 <span asp-validation-for="ConversionId" class="text-danger"></span>
             </div>
             <!-- hidden input to transmit conversionList (IEnumerable) -->
             @if (ViewBag.AccountsAvailable && ViewBag.ConversionsAvailable)
             {
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             }
@@ -48,6 +53,6 @@
     </div>
 </div>
 
-<div>
+<div class="mt-3">
     <a asp-action="Index">Back to List</a>
 </div>
