--- a/MVC/Views/AppUser/Buy.cshtml
+++ b/MVC/Views/AppUser/Buy.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Buy";
+
 }
 
 
@@ -9,28 +10,39 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Buy">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AccountId" class="control-label">AccountUsername    </label>
+                <label asp-for="AccountId" class="control-label">User</label>
                 <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountsSelect"></select>
                 <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ConversionId" class="control-label">Conversion</label>
                 <select asp-for="ConversionId" class="form-control" asp-items="ViewBag.ConversionsSelect"></select>
                 <span asp-validation-for="ConversionId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Quantity" class="control-label">Quantity</label>
-                <input asp-for="Quantity" class="form-control" type="number" step="1" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
+
+            <div class="col-md-12 mt-3">
+                <div class="form-group">
+                    <label asp-for="Quantity" class="control-label">Quantity</label>
+
+                    <div class="input-group">
+                        <input asp-for="Quantity" class="form-control" type="number" step="1" />
+                        <button type="submit" class="btn btn-primary" value="Calculate" name="calculate" formaction="Calculate">Calculate</button>
+                    </div>
+                    <span asp-validation-for="Quantity" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group mt-3">
+                <label asp-for="calculatedPrice" class="control-label">Total</label>
+                <input asp-for="calculatedPrice" class="form-control" readonly />
             </div>
             <!-- hidden input to transmit conversionList (IEnumerable) -->
             @if (ViewBag.AccountsAvailable && ViewBag.ConversionsAvailable)
             {
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="form-group mt-3">
+                    <input type="submit" value="Buy" class="btn btn-primary" />
                 </div>
             }
         </form>
