--- a/MVC/Views/UserGroups/Delete.cshtml
+++ b/MVC/Views/UserGroups/Delete.cshtml
@@ -15,13 +15,13 @@
             User
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Username)
+            @Html.DisplayFor(model => model.UserDisplayName)
         </dd>
         <dt class = "col-sm-2">
             Group
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GroupName) (@Html.DisplayFor(model => model.GroupAcronym))
+            @Html.DisplayFor(model => model.GroupDisplayName)
         </dd>
     </dl>
     
