--- a/MVC/Views/UserGroups/Details.cshtml
+++ b/MVC/Views/UserGroups/Details.cshtml
@@ -14,13 +14,13 @@
             User
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Username)
+            @Html.DisplayFor(model => model.UserDisplayName)
         </dd>
         <dt class = "col-sm-2">
            Group
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GroupName)
+            @Html.DisplayFor(model => model.GroupDisplayName)
         </dd>
     </dl>
 </div>
